Customized with my netlify url

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="twitter:image"
-      content="http://relaxed-payne-d1bfbe.netlify.com/opengraph?title=Building%20an%20OpenGraph%20image%20generation%20API%20with%20Cloudinary%20Netlify%20Functions%20and%20React&tags=figma,netlify%20functions,playwright&author=chrisbiscardi"
+      content="https://quizzical-liskov-0bc7e1.netlify.app/opengraph?title=Building%20an%20OpenGraph%20image%20generation%20API%20with%20Cloudinary%20Netlify%20Functions%20and%20React&tags=figma,netlify%20functions,playwright&author=chrisbiscardi"
     />
   </head>
 
