--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@chrisbiscardi" />
-    <meta name="twitter:creator" content="@chrisbiscardi" />
+    <meta name="twitter:site" content="@zacjones93" />
+    <meta name="twitter:creator" content="@zacjones93" />
     <meta
       name="twitter:title"
       content="Building an OpenGraph image generation API with Cloudinary, Netlify Functions, and React"
